# Silent-Wallet

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.web  LICENSE  README.md  SECURITY.md  capacitor.config.ts  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
api/: main.py
docs/: ECOSYSTEM.md  LICENSE_KEYS.md  MONETIZATION.md  PRODUCT_EXPERIENCE.md  SECURITY_ECOSYSTEM.md  SILENT_PRO.md
scripts/: build-app.mjs  check-release-env.mjs  hash-license.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/accounts/: AccountSelector.tsx  AccountsView.tsx
src/components/addressBook/: AddressBookModal.tsx  AddressBookView.tsx  AddressLabel.tsx
src/components/common/: EmptyState.tsx  Skeleton.tsx
src/components/exports/: ExportPanel.tsx
src/components/layout/: AppShell.tsx  BottomNav.tsx  Header.tsx
src/components/learn/: LearnArticleCard.tsx  LearnArticleView.tsx  LearnCenter.tsx
src/components/onboarding/: Lock.tsx  (+7 more)
src/lib/: api.ts  appUpdate.ts  bitcoin.ts  cache.ts  chains.ts  config.ts  history.ts  i18n.tsx  nativeStorage.ts  prices.ts  serverConfig.ts  serverEvmHistory.ts  session.ts  solana.ts  storage.ts  store.ts  tokenVerification.test.ts  tokenVerification.ts  tokens.ts  tron.ts  useActivityTracker.ts  useChainData.ts  utils.ts  wallet.ts  walletRefresh.ts
(+89 files in other folders)
